made changes in pattern